# MOTFM

./: .gitignore  LICENSE  README.md  inferer.py  pyproject.toml  requirements.txt  trainer.py
configs/: class_conditioning.yaml  config_3D.yaml  default.yaml  mask_class_conditioning.yaml  mask_class_conditioning_camus_10ep.yaml  mask_conditioning.yaml  unconditional.yaml
docs/: index.html
evaluation_3d/: README.md  evaluate_3d.py
utils/: general_utils.py  motfm_logging.py  utils_fm.py
